--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;800&family=Roboto:wght@100;300;400&display=swap"
+    rel="stylesheet">
 
   <link rel="stylesheet" href="https://use.typekit.net/dco1qqp.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
